--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,6 +27,6 @@
 
     <!-- Tool Bar -->
     <dimen name="expanded_toolbar">128dp</dimen>
-
+    <dimen name="medium_toolbar">112dp</dimen>
 
 </resources>
