--- a/app/src/main/res/layout/academic_calendar_recycle.xml
+++ b/app/src/main/res/layout/academic_calendar_recycle.xml
@@ -14,23 +14,9 @@
         android:id="@+id/year"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|center_vertical"
-        android:paddingLeft="3dp"
-        android:paddingStart="3dp"
-        android:paddingRight="0dp"
-        android:paddingEnd="0dp"
+        android:layout_gravity="center"
         android:text="@string/academic_year_2014_15"
         android:textSize="18sp"
-        android:textColor="@color/kzooOrange" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|center_vertical"
-        android:paddingLeft="0dp"
-        android:paddingStart="0dp"
-        android:paddingRight="3dp"
-        android:paddingEnd="3dp"
-        android:src="@drawable/bt_next_blue" />
+        android:textColor="@color/main21" />
 
 </android.support.v7.widget.CardView>
