--- a/app/src/main/res/layout/activity_academic.xml
+++ b/app/src/main/res/layout/activity_academic.xml
@@ -15,7 +15,14 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" >
 
-            <include layout="@layout/toolbar"/>
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/medium_toolbar"
+                android:minHeight="@dimen/abc_action_bar_default_height_material"
+                android:background="@color/main21"
+                app:theme="@style/Toolbar"
+                app:popupTheme="@style/Theme.AppCompat.Light" />
 
             <com.techhab.collegeapp.PagerSlidingTabStrip
                 android:id="@+id/tabs"
@@ -24,8 +31,8 @@
                 android:layout_gravity="bottom"
                 android:scrollbars="none"
                 android:fillViewport="true"
-                android:clipToPadding="false"
-                app:pstsPaddingMiddle="false" />
+                app:pstsPaddingMiddle="false"
+                app:pstsShouldExpand="true" />
 
         </FrameLayout>
 
