--- a/app/src/main/res/layout/recycle_item.xml
+++ b/app/src/main/res/layout/recycle_item.xml
@@ -1,73 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
+    android:layout_gravity="center"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingLeft="8dp"
-    android:paddingRight="8dp"
-    android:paddingTop="8dp">
+    android:layout_height="100dp"
+    android:layout_margin="8dp"
+    style="@style/CardView">
 
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
-        android:layout_gravity="center"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_margin="3dp"
-        card_view:cardElevation="2dp"
-        card_view:cardCornerRadius="3dp">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="65dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/western_michigan_broncos"
+            android:paddingLeft="8dp"/>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="65dp"
-                android:layout_height="match_parent"
-                android:src="@drawable/western_michigan_broncos"
-                android:paddingLeft="8dp"/>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="16dp">
-
-                <TextView
-                    android:id="@+id/game_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Football vs. Western Michigan University"
-                    android:textStyle="bold"
-                    android:textSize="17dp"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Saturday, Nov. 9th"
-                    android:alpha=".75"/>
-
-                <!--<View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:alpha="0.2"
-                    android:background="@color/drawerDivider"/>-->
-
-            </LinearLayout>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp">
 
             <TextView
-                android:id="@+id/text"
+                android:id="@+id/game_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="[string]"
-                android:visibility="invisible"
-                android:textColor="@color/theGray" />
+                android:text="Football vs. Western Michigan University"
+                android:textStyle="bold"
+                android:textSize="17dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Saturday, Nov. 9th"
+                android:alpha=".75"/>
+
+            <!--<View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:alpha="0.2"
+                android:background="@color/drawerDivider"/>-->
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="[string]"
+            android:visibility="invisible"
+            android:textColor="@color/theGray" />
 
-</RelativeLayout>
+    </LinearLayout>
+
+</android.support.v7.widget.CardView>
