--- a/app/src/main/res/layout/course_search_recycle.xml
+++ b/app/src/main/res/layout/course_search_recycle.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_gravity="center"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:layout_marginTop="6dp"
-    android:layout_marginLeft="6dp"
-    android:layout_marginRight="6dp"
-    android:layout_marginBottom="2dp"
-    style="@style/CardView" >
+    android:layout_marginTop="1dp"
+    app:cardBackgroundColor="@color/cardview_light_background"
+    app:cardElevation="1dp"
+    app:cardMaxElevation="1dp"
+    app:cardUseCompatPadding="false"
+    app:cardPreventCornerOverlap="true" >
 
     <TextView
         android:id="@+id/subject"
