--- a/app/src/main/res/layout/fragment_academic_term.xml
+++ b/app/src/main/res/layout/fragment_academic_term.xml
@@ -1,6 +1,8 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     tools:context="com.techhab.collegeapp.AcademicTermFragment">
 
     <TableLayout
@@ -8,4 +10,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</FrameLayout>
+</ScrollView>
