--- a/app/src/main/res/layout/course_search_recycle.xml
+++ b/app/src/main/res/layout/course_search_recycle.xml
@@ -5,12 +5,18 @@
     android:layout_gravity="center"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:layout_marginTop="1dp"
+    android:layout_marginTop="2dp"
+    android:layout_marginLeft="3dp"
+    android:layout_marginRight="3dp"
+    android:layout_marginBottom="2dp"
+    style="@style/CardView" >
+
+    <!--android:layout_marginTop="1dp"
     app:cardBackgroundColor="@color/cardview_light_background"
     app:cardElevation="1dp"
     app:cardMaxElevation="1dp"
     app:cardUseCompatPadding="false"
-    app:cardPreventCornerOverlap="true" >
+    app:cardPreventCornerOverlap="true"-->
 
     <TextView
         android:id="@+id/subject"
