--- a/app/src/main/res/layout/academic_calendar_recycle.xml
+++ b/app/src/main/res/layout/academic_calendar_recycle.xml
@@ -12,12 +12,13 @@
 
     <TextView
         android:id="@+id/year"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center"
+        android:background="@color/main00"
         android:text="@string/academic_year_2014_15"
         android:textSize="17sp"
         android:textStyle="bold"
-        android:textColor="@color/main21" />
+        android:textColor="@color/WhiteSmoke" />
 
 </android.support.v7.widget.CardView>
