--- a/app/src/main/res/layout/course_search_recycle.xml
+++ b/app/src/main/res/layout/course_search_recycle.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_gravity="center"
     android:layout_width="match_parent"
@@ -11,20 +10,14 @@
     android:layout_marginBottom="2dp"
     style="@style/CardView" >
 
-    <!--android:layout_marginTop="1dp"
-    app:cardBackgroundColor="@color/cardview_light_background"
-    app:cardElevation="1dp"
-    app:cardMaxElevation="1dp"
-    app:cardUseCompatPadding="false"
-    app:cardPreventCornerOverlap="true"-->
-
     <TextView
         android:id="@+id/subject"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center"
+        android:background="@color/main00"
         android:textSize="17sp"
         android:textStyle="bold"
-        android:textColor="@color/main21" />
+        android:textColor="@color/WhiteSmoke" />
 
 </android.support.v7.widget.CardView>
