--- a/app/src/main/res/layout/activity_cafeteria.xml
+++ b/app/src/main/res/layout/activity_cafeteria.xml
@@ -26,7 +26,12 @@
                 android:scrollbars="none"
                 android:fillViewport="true"
                 app:pstsPaddingMiddle="false"/>
-
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18dp"
+                android:textColor="@color/white"
+                android:id="@+id/tv_current_time"
+                android:layout_gravity="center"/>
         </FrameLayout>
 
         <android.support.v4.view.ViewPager
