--- a/app/src/main/res/layout/food_menu_item.xml
+++ b/app/src/main/res/layout/food_menu_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -12,4 +12,4 @@
         android:textStyle="bold"
         android:id="@+id/tv_food_item"/>
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
