--- a/app/src/main/res/layout/fragment_richardson_menu_breakfast.xml
+++ b/app/src/main/res/layout/fragment_richardson_menu_breakfast.xml
@@ -4,9 +4,10 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ListView android:layout_width="match_parent"
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/lvRichardson_menu_breakfast"
-        android:background="@+color/white"/>
+        android:background="@color/white"/>
 
 </LinearLayout>
