--- a/app/src/main/res/layout/fragment_campus_buildings.xml
+++ b/app/src/main/res/layout/fragment_campus_buildings.xml
@@ -3,12 +3,11 @@
     android:layout_height="match_parent"
     tools:context="com.techhab.collegeapp.CourseSearchFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:id="@+id/label_hicks_center"
-        android:text="@string/label_building_Hicks_Center"
-        android:onClick="onClick"
-        android:clickable="true"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/my_recycler_view"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 
 </FrameLayout>
