--- a/app/src/main/res/layout/academic_calendar_recycle.xml
+++ b/app/src/main/res/layout/academic_calendar_recycle.xml
@@ -15,10 +15,9 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:gravity="center"
-        android:background="@color/main00"
         android:text="@string/academic_year_2014_15"
         android:textSize="17sp"
         android:textStyle="bold"
-        android:textColor="@color/WhiteSmoke" />
+        android:textColor="@color/main00" />
 
 </android.support.v7.widget.CardView>
