--- a/app/src/main/res/layout/course_search_recycle.xml
+++ b/app/src/main/res/layout/course_search_recycle.xml
@@ -15,9 +15,8 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:gravity="center"
-        android:background="@color/main00"
         android:textSize="17sp"
         android:textStyle="bold"
-        android:textColor="@color/WhiteSmoke" />
+        android:textColor="@color/main00" />
 
 </android.support.v7.widget.CardView>
