Almost completed the AthleticActivity skeleton! No real content frames yet, but the toolbar and stuff are pretty much done

--- a/app/src/main/res/layout/activity_athletic.xml
+++ b/app/src/main/res/layout/activity_athletic.xml
@@ -28,6 +28,7 @@
                 />
 
             <LinearLayout
+                android:id="@+id/genderSwitchLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
