--- a/app/src/main/res/menu/menu_athletic.xml
+++ b/app/src/main/res/menu/menu_athletic.xml
@@ -1,4 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
+    <!-- Temporary menu to reset sharedpreferences related to this activity -->
+    <item android:id="@+id/action_reset_shared_prefs"
+        android:title="@string/action_reset_shared_prefs"
+        app:showAsAction="never" />
     <!-- Search Action -->
     <item android:id="@+id/action_search"
         android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
