--- a/app/src/main/res/layout/fragment_calender.xml
+++ b/app/src/main/res/layout/fragment_calender.xml
@@ -4,6 +4,11 @@
     android:layout_height="match_parent"
     tools:context="com.techhab.collegeapp.CalendarFragment">
 
+    <!--<View
+        android:layout_width="fill_parent"
+        android:layout_height="180dp"
+        android:background="@color/main00" />-->
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
         android:scrollbars="vertical"
