--- a/app/src/main/res/layout/fragment_course_search.xml
+++ b/app/src/main/res/layout/fragment_course_search.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.techhab.collegeapp.CalendarFragment">
+    android:background="@color/main00"
+    tools:context="com.techhab.collegeapp.CourseSearchFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
