Proof of concept branch for the food activity

--- a/app/src/main/res/layout/activity_cafeteria.xml
+++ b/app/src/main/res/layout/activity_cafeteria.xml
@@ -25,7 +25,8 @@
                 android:layout_gravity="bottom"
                 android:scrollbars="none"
                 android:fillViewport="true"
-                app:pstsPaddingMiddle="false"/>
+                app:pstsPaddingMiddle="false"
+                app:pstsShouldExpand="true"/>
 
         </FrameLayout>
 
