--- a/app/src/main/res/layout/activity_food.xml
+++ b/app/src/main/res/layout/activity_food.xml
@@ -37,11 +37,9 @@
 
 
     </LinearLayout>
-    <fragment android:id="@+id/home_navigation_drawer"
-        android:layout_width="@dimen/navigation_drawer_width"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:name="com.techhab.collegeapp.NavigationDrawerFragment" />
+
+    <include layout="@layout/navigation_drawer" />
+
     <!--<ListView
         android:id="@+id/listview_drawer"
         android:layout_width="260dp"
