--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -44,10 +44,6 @@
     </LinearLayout>
 
     <!--Navigation Drawer-->
-    <fragment android:id="@+id/home_navigation_drawer"
-        style="@style/NavDrawer"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:name="com.techhab.collegeapp.NavigationDrawerFragment" />
+    <include layout="@layout/navigation_drawer" />
 
  </android.support.v4.widget.DrawerLayout>
