--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -4,11 +4,10 @@
     </style>
 
     <style name="Theme.KZOO" parent="@style/Theme.AppCompat.Light">
-
         <!-- customize the color palette -->
-        <item name="colorPrimary">#F00000</item>
-        <item name="colorPrimaryDark">#F00000</item>
-        <item name="colorAccent">@color/kzooOrange</item>
+        <item name="colorPrimary">@color/kzooOrange</item>
+        <item name="colorPrimaryDark">@color/OrangeRed</item>
+        <item name="colorAccent">@color/Orange</item>
         <item name="windowActionBar">false</item>
         <item name="drawerArrowStyle">@style/Theme.Test.DrawerArrowStyle</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
@@ -20,5 +19,9 @@
     <style name="Theme.Test.DrawerArrowStyle" parent="@style/Widget.AppCompat.DrawerArrowToggle">
         <item name="spinBars">true</item>
         <item name="color">@android:color/white</item>
+    </style>
+
+    <style name="Theme.NeutralSwitchStyle" parent="Theme.KZOO">
+        <item name="colorControlActivated">@color/white</item>
     </style>
 </resources>
