--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -40,10 +40,10 @@
             android:id="@+id/pager"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
-            tools:context=".TermActivity"/>
-
+            tools:context=".EventsActivity" />
 
     </LinearLayout>
+
     <fragment android:id="@+id/home_navigation_drawer"
         android:layout_width="@dimen/navigation_drawer_width"
         android:layout_height="match_parent"
