--- a/app/src/main/res/layout/events_recycle.xml
+++ b/app/src/main/res/layout/events_recycle.xml
@@ -55,7 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
-            android:textColor="@color/black" />
+            android:textColor="@color/main20" />
 
         <TextView
             android:id="@+id/time"
