--- a/app/src/main/res/layout/activity_cafeteria.xml
+++ b/app/src/main/res/layout/activity_cafeteria.xml
@@ -14,9 +14,14 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
 
-            <include
+            <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
-                layout="@layout/toolbar" />
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/expanded_toolbar"
+                android:minHeight="@dimen/abc_action_bar_default_height_material"
+                android:background="@color/main10"
+                app:theme="@style/Toolbar"
+                app:popupTheme="@style/Theme.AppCompat.Light" />
 
             <com.techhab.collegeapp.PagerSlidingTabStrip
                 android:id="@+id/tabs"
