--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -22,6 +22,6 @@
     </style>
 
     <style name="Theme.NeutralSwitchStyle" parent="Theme.KZOO">
-        <item name="colorControlActivated">@color/white</item>
+        <item name="colorAccent">@color/kzooOrange</item>
     </style>
 </resources>
