--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -104,7 +104,7 @@
     <color name="Goldenrod">#DAA520</color>
     <color name="Orchid">#DA70D6</color>
     <color name="Thistle">#D8BFD8</color>
-    <color name="LightGrey">#D3D3D3</color>
+    <color name="LightGray">#D3D3D3</color>
     <color name="Tan">#D2B48C</color>
     <color name="Chocolate">#D2691E</color>
     <color name="Peru">#CD853F</color>
@@ -184,4 +184,9 @@
     <color name="DarkBlue">#00008B</color>
     <color name="Navy">#000080</color>
     <color name="Black">#000000</color>
+
+
+    <!-- Material Colors -->
+    <color name="Gray_200">#EEEEEE</color>
+
 </resources>
